2021/sep/client/demo-client-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: demo-client-v1
 namespace: jeevan-namespace
spec:
 replicas: 1
 selector:
  matchLabels:
   app: demo-client
   version: v1
 template:
  metadata:
   labels:
    app: demo-client
    version: v1
  spec:
   containers:
   - name: demo-client
     image: 10.20.51.28:5000/demo-client:v1
     imagePullPolicy: Always
     ports:
     - containerPort: 80
