2021/sep/client/demo-client-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: demo-client-service
 namespace: jeevan-namespace
spec:
 selector:
  app: demo-client
 ports:
 - name: http
   port: 80
